force-app/main/default/objects/Bid_Offer_History__c/Bid_Offer_History__c.object-meta.xml
<CustomObject>
    <label>Bid Offer History</label>
    <nameField>
        <displayFormat>BOH - {000000}</displayFormat>
        <label>Bid Offer History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bid Offer Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>