force-app/main/default/objects/Bid_Offer_History__c/fields/Loss_Category__c.field-meta.xml
<CustomField>
    <fullName>Loss_Category__c</fullName>
    <formula>Loss_Item__r.Loss_Category__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Loss Category</label>
    <type>Text</type>
</CustomField>