force-app/main/default/objects/Bid_Offer_History__c/fields/Loss_Item__c.field-meta.xml
<CustomField>
    <fullName>Loss_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loss Item</label>
    <referenceTo>Loss_Sub_Categories__c</referenceTo>
    <relationshipLabel>Bid Offer Histories</relationshipLabel>
    <relationshipName>Bid_Offer_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>