force-app/main/default/objects/Bid_Offer_History__c/fields/Merit_Def_Pos__c.field-meta.xml
<CustomField>
    <fullName>Merit_Def_Pos__c</fullName>
    <label>Merit Def Pos</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>