force-app/main/default/objects/Bid_Offer_History__c/fields/Pos_Last_Modified_By__c.field-meta.xml
<CustomField>
    <fullName>Pos_Last_Modified_By__c</fullName>
    <label>Pos Last Modified By</label>
    <length>32</length>
    <type>Text</type>
</CustomField>