force-app/main/default/objects/Bid_Offer_History__c/fields/Pos_Last_Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>Pos_Last_Modified_Date__c</fullName>
    <label>Pos Last Modified Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>