force-app/main/default/objects/Bid_Offer_History__c/fields/Quantum_Cl_Pos__c.field-meta.xml
<CustomField>
    <fullName>Quantum_Cl_Pos__c</fullName>
    <label>Quantum Cl Pos</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>