force-app/main/default/objects/Bid_Offer_History__c/fields/Related_Case__c.field-meta.xml
<CustomField>
    <fullName>Related_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Bid Offer Histories</relationshipLabel>
    <relationshipName>Bid_Offer_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>