force-app/main/default/objects/Bid_Offer_History__c/fields/Schedule_of_losses__c.field-meta.xml
<CustomField>
    <fullName>Schedule_of_losses__c</fullName>
    <label>Schedule of losses</label>
    <length>32</length>
    <type>Text</type>
</CustomField>