force-app/main/default/objects/Bid_Offer_History__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Related_Case__c</columns>
    <columns>Schedule_of_losses__c</columns>
    <columns>Loss_Category__c</columns>
    <columns>Loss_Item__c</columns>
    <columns>Merit_Cl_Pos__c</columns>
    <columns>Merit_Def_Pos__c</columns>
    <columns>Quantum_Cl_Pos__c</columns>
    <columns>Quantum_Def_Pos__c</columns>
    <columns>Pos_Last_Modified_By__c</columns>
    <columns>Pos_Last_Modified_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>